       ============================================
 Developed and maintained by Matthias Ettrich (ettrich@kde.org)


kwm (since 0.10) was almost rewritten from scratch in C++.  Many ideas
and some code went in from David Hogan's 9wm, a smart and small
windowmanager written in plain C. There are of course also strong
influences from my experiences with the former kwm.


In 0.10:
--------

  patchlevel 1:
       - "-version" command line argument
       - Alt-MMB fixed
       - bugfix in module registration 
       - bugfix in X error handling during initialization


Some changes beside the rewrite since previous kwms:

 - well documentated libkwm allows clients to communicate with the
   windowmanager in an easy way (will go into libkdecore as kwm.h) 
 - more complete README including a mini-FAQ
 - does not select button events from the root window.
   Rootwindow handling will be done by krootwin.
 - Session management (uses the rstart-command for remote machines)
 - Session management proxy for applications which cannot do real
   session management (almost all X-Applications, unfortunately)
 - logout dialog displays clients who cannot do session management or do
   very poor pseudo session management a la xterm or xedit:
   Just select the client to jump to his window.
 - logout dialog also display clients who can do session management but
   set the KWM_WIN_UNSAVED_DATA property to True. Just select the client 
   to jump to his window.
 - nicer Ctrl-Tab virtual desktop switching
 - nicer Alt-Tab window switching (takes care about the focus-traversal
   order and shows a pretty box with icons)
 - [Alt/Control]-Escape shows a pretty "current session"-box
 - improved windows stacking (no more flickering)
 - nicer resize animation (cares about the server respond time)
 - nicer outlines (kwm style :-)
 - unique window titles (a la emacs buffers)
 - close will destroy the window for clients that do not understand